[project]
name = "durable-claude-workflows"
version = "0.1.0"
description = "Durable, scalable 'dynamic workflows' for Claude on Temporal: Claude plans inside an activity, Temporal durably executes the multi-agent research workflow."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "temporalio>=1.8",
    "anthropic>=0.49",
    "pydantic>=2.7",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "prompt-toolkit>=3.0",
]

# Flat module layout (no package / no __init__.py). Tell uv to manage only the
# virtualenv + dependencies and NOT try to build/install this directory.
[tool.uv]
package = false
